--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Gay Tools</title>
   </head>
   <body>
-
+    <h1>hey guys do you wanna use a shitty multitool?</h1>
+    <p>if the answer was yes then use this peice of shit</p>
   </body>
 </html>
