--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Gay Tools</title>
   </head>
   <body>
-    <h1>hey guys do you wanna use a shitty multitool?</h1>
-    <p>if the answer was yes then use this peice of shit</p>
+    <h1>fucking peice of shit website for a peice of shit tool</h1>
+    <h2>dont use it</h2>
   </body>
 </html>
