--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   </head>
   <body>
     <h1>fucking peice of shit website for a peice of shit tool</h1>
+    <h1><a href="https://github.com/Cheese-Berger/gay_tool" target="_blank"> heres the github link</a></h1>
     <h2>dont use it</h2>
     <h3>please</h3>
+    <p>lolol</p>
+    
   </body>
 </html>
