--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Gay Tools</title>
+
+    <link rel = "icon" href =  
+    "./media/281cfea76faf8376581ac3c07592c01e.png" 
+            type = "image/x-icon"> 
+
   </head>
   <body>
     <h1>fucking peice of shit website for a peice of shit tool</h1>
     <h1><a href="https://github.com/Cheese-Berger/gay_tool" target="_blank"> heres the github link</a></h1>
-    <h2>dont use it</h2>
+    <h2>dont use t</h2>
     <h3>please</h3>
-    <p>lolol</p>
+    <p>lolol</p>i
+    <p>why you shouldnt use this tool:</p>
+    <ul>
+      it sucks
+      it sucks
+      yes
+    </ul>
     
   </body>
 </html>
