--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8">
     <title>Gay Tools</title>
 
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
+
     <link rel = "icon" href =  
-    "./media/281cfea76faf8376581ac3c07592c01e.png" 
+    "./img/281cfea76faf8376581ac3c07592c01e.png" 
             type = "image/x-icon"> 
 
   </head>
@@ -17,10 +23,8 @@
     <p>lolol</p>i
     <p>why you shouldnt use this tool:</p>
     <ul>
-      it sucks
-      it sucks
-      yes
+      <li>it sucks</li>
+      <li>dont use it</li>
     </ul>
-    
-  </body>
+
 </html>
