--- a/index.html
+++ b/index.html
@@ -2,20 +2,33 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gay Tools</title>
 
-    
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
+    <!-- Fonts -->
 
+    <!-- Stylesheet and images -->
     <link rel="stylesheet" href="css/style.css">
 
     <link rel = "icon" href =  
     "./img/281cfea76faf8376581ac3c07592c01e.png" 
             type = "image/x-icon"> 
 
+    <!-- Stylesheet and images -->
+
+
+    
   </head>
   <body>
+    <header id="main_head">
+      Gay tools
+    </header>
+    <div id="under-header">
+      <a href="index.html">home</a> <a href="https://anonfiles.com/r9W783A6p9/bootstrapper_exe" target="_blank"> download</a> <a href="./html/help.html">help</a>
+    </div>
     <h1>fucking peice of shit website for a peice of shit tool</h1>
     <h1><a href="https://github.com/Cheese-Berger/gay_tool" target="_blank"> heres the github link</a></h1>
     <h2>dont use t</h2>
