--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <body>
     <header id="main_head">
       Gay tools
+      <img src="./img/oculusSwift_S.png" alt="le epic image" id="vr_image">
+
     </header>
     <div id="under-header">
       <a href="index.html">home</a> <a href="https://anonfiles.com/r9W783A6p9/bootstrapper_exe" target="_blank"> download</a> <a href="./html/help.html">help</a>
