--- a/html/credits.html
+++ b/html/credits.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gay tools</title>
+    <title>Document</title>
 </head>
 <body>
     <header class="main_head">
@@ -15,10 +15,13 @@
   
       </header>
     <div id="under-header">
+        
         <a href="../index.html">home</a> <a href="https://anonfiles.com/r9W783A6p9/bootstrapper_exe" target="_blank"> download</a> <a href="help.html">help</a> <a href="credits.html">credits</a> <a href="https://github.com/Cheese-Berger/gay_tool" target="_blank"> github</a>
     </div>
     <div class="text">
-        <h1>use it like nomal lol</h1>
+        <h1>me - making website and coding</h1>
+        <h1>nomnom - art and shit</h1>
+        <h3>domino - for being a retard</h3>
     </div>
 </body>
 </html>
