--- a/index.html
+++ b/index.html
@@ -23,23 +23,24 @@
     
   </head>
   <body>
-    <header id="main_head">
+    <header class="main_head">
       Gay tools
       <img src="./img/oculusSwift_S.png" alt="le epic image" id="vr_image">
 
     </header>
-    <div id="under-header">
-      <a href="index.html">home</a> <a href="https://anonfiles.com/r9W783A6p9/bootstrapper_exe" target="_blank"> download</a> <a href="./html/help.html">help</a>
-    </div>
-    <h1>fucking peice of shit website for a peice of shit tool</h1>
-    <h1><a href="https://github.com/Cheese-Berger/gay_tool" target="_blank"> heres the github link</a></h1>
-    <h2>dont use t</h2>
-    <h3>please</h3>
-    <p>lolol</p>i
-    <p>why you shouldnt use this tool:</p>
-    <ul>
-      <li>it sucks</li>
-      <li>dont use it</li>
-    </ul>
 
+    <div id="under-header">
+      <a href="index.html">home</a> <a href="https://anonfiles.com/r9W783A6p9/bootstrapper_exe" target="_blank"> download</a> <a href="./html/help.html">help</a> <a href="./html/credits.html">credits</a> <a href="https://github.com/Cheese-Berger/gay_tool" target="_blank"> github</a>
+    </div>
+  
+    <div class="text">
+      <h1>fucking peice of shit website for a peice of shit tool</h1>
+      <h1>it gets updates like once a year</h1>
+      <p>why you shouldnt use this tool:</p>
+      <ul>
+        <li>it sucks</li>
+        <li>dont use it</li>
+      </ul>
+    </div>
+  </body>
 </html>
