--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gay Tools</title>
 
+
+    <meta property="og:site_name" content="Gay tools">
+    <meta property="og:url" content="https://cheese-berger.github.io/GayTools/">
+    <meta property="og:title" content="Gay Tools">
+    <meta property="og:description" content="shit website">
+    <meta property="og:type" content="website">
+
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@700&display=swap" rel="stylesheet">
