--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gay Tools</title>
 
-
-    <meta property="og:site_name" content="Gay tools">
     <meta property="og:url" content="https://cheese-berger.github.io/GayTools/">
     <meta property="og:title" content="Gay Tools">
     <meta property="og:description" content="shit website">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="./img/281cfea76faf8376581ac3c07592c01e.png" />
 
 
     <!-- Fonts -->
