--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta property="og:title" content="Gay Tools">
     <meta property="og:description" content="shit website">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="./img/281cfea76faf8376581ac3c07592c01e.png" />
+    <meta property="og:image" content="C:/Users/pchel/OneDrive/Dokumenty/coding/gamin g/img/281cfea76faf8376581ac3c07592c01e.png">
+    <meta content="#43B581" data-react-helmet="true" name="theme-color">
 
 
     <!-- Fonts -->
