--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
 
     <div id="under-header">
-      <a href="index.html">home</a> <a href="https://anonfiles.com/r9W783A6p9/bootstrapper_exe" target="_blank"> download</a> <a href="./html/help.html">help</a> <a href="./html/credits.html">credits</a> <a href="https://github.com/Cheese-Berger/gay_tool" target="_blank"> github</a>
+      <a href="index.html">home</a> <a href="https://anonfiles.com/r9W783A6p9/bootstrapper_exe" target="_blank"> download</a> <a href="./html/help.html">help</a> <a href="./html/credits.html">credits</a> <a href="https://github.com/Cheese-Berger/gay_tool" target="_blank"> github</a> <a href="https://www.youtube.com/watch?v=d0tGBCCE0lc">tutorial</a>
     </div>
     
     <div class="text">
